trying to fix white space at bottom of page

--- a/Assets/CSS/navbar.css
+++ b/Assets/CSS/navbar.css
@@ -6,6 +6,13 @@
 
 }
 
+main{
+  min-height:calc(100vh - 100px);
+  height:auto;
+  box-sizing:border-box;
+}
+
+
 main, footer {
   background: rgb(244,232,234);
   background: linear-gradient(0deg, rgba(244,232,234,1) 0%, rgba(247,217,210,1) 35%, rgba(187,75,91,0.38139005602240894) 100%);
