--- a/Assets/CSS/rocket-style.css
+++ b/Assets/CSS/rocket-style.css
@@ -41,7 +41,7 @@ img {
 h3 {
     text-align: center;
     font-size: calc(40px + .3vw);
-    background-color: rgb(21, 108, 201);
+    background-color: rgb(64, 173, 203);
     color: white;
     border-radius: 8px;
     margin-top: 30px;
